schema/testdata/validation_relationships_more_than_one_reverse_many/schema.keel
model Book {
    fields {
        // Book having two Person HasOne relation fields is invalid, because
        // Person has a HasMany reverse link. In such cases, only one is allowed.
        author Person
        editor Person
    }
}

model Person {
    fields {
        loveThese Book[]
    }
}
